# rawr

./: .gitignore  Cargo.toml  Makefile  README.md  clippy.toml  output.txt
.config/: nextest.toml
.github/workflows/: ci.yaml
docs/: quality.md
local/: environment.yaml
migrations/: 001_initial_schema.sql
mk/: dev.mk  environment.mk  lang-rust.mk  log.mk  qa.mk
rawr-acm/: Cargo.toml
rawr-acm/benches/: acm.rs
rawr-acm/examples/: profile_acm.rs
rawr-acm/src/: acm.rs  config.rs  lib.rs  trie.rs
rawr-config/: Cargo.toml
rawr-config/src/: deployment.rs  errors.rs  lib.rs
rawr-core/: Cargo.toml
rawr-core/src/: ids.rs  lib.rs  pap.rs  pdp.rs  policy.rs  policy_store.rs
rawr-db/: Cargo.toml
rawr-db/src/: config.rs  lib.rs
rawr-error/: Cargo.toml
rawr-error/src/: error.rs  lib.rs
rawr-pap/: Cargo.toml
rawr-pap/src/: lib.rs
rawr-pdp/: Cargo.toml
rawr-pdp/benches/: enron.rs
rawr-pdp/src/: error.rs  lib.rs
rawr-pdp/testdata/: 35zt2LD8MyWdngVgdr4Qaqcpesb.json  35zt2PHzXp3K5VzHTNuTbTgYNSl.json  35zt2PT8xuykGfG83dEp5cZY4AM.json
rawr-pip/: Cargo.toml
rawr-pip/src/: error.rs  json.rs  lib.rs  postgres.rs
rawr-resource-name/: Cargo.toml
rawr-resource-name/benches/: parse.rs
rawr-resource-name/examples/: profile_resource_name.rs  profile_rn.rs
rawr-resource-name/src/: error.rs  lib.rs  resource_name.rs
src/: acm.rs  lib.rs  role.rs  trie.rs
tests/: authz.rs
tests/testdata/: invalid.json  valid.json
