[workspace]
members  = ["rawr-acm","rawr-pap","rawr-pip","rawr-pdp"]
resolver = "3"

[workspace.dependencies]
# all forsaken must use the same pretty
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# all forsaken must use the same id 
svix-ksuid = { version = "^0.8.0", features = ["serde"] }
