[workspace]
members  = ["rawr-acm","rawr-config","rawr-db","rawr-pap","rawr-pdp","rawr-pip"]
resolver = "3"

[workspace.dependencies]
# all forsaken must use the same db
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }

# all forsaken must use the same pretty
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# all forsaken must use the same id 
svix-ksuid = { version = "^0.8.0", features = ["serde"] }

# unified config loading
envconfig = "0.11.0"
