[package]
name = "rawr-pdp"
version = "0.1.0"
edition = "2024"

[dependencies]
svix-ksuid = { workspace = true }

rawr-acm = { path = "../rawr-acm" }
rawr-pip = { path = "../rawr-pip" }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rawr-pap = { path = "../rawr-pap" }
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "enron"
harness = false
