[package]
name = "rawr-pip"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
svix-ksuid = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }

rawr-acm = { path = "../rawr-acm" }
rawr-pap = { path = "../rawr-pap" }
rawr-db = { path = "../rawr-db" }
